# djangoScannerXSS

./: .env  .gitignore  README.MD  manage.py  pyproject.toml  setup.cfg
app_scanner/: __init__.py  admin.py  apps.py  choices.py  forms.py  models.py  process.py  scan.py  tasks.py  urls.py  views.py
app_scanner/fixtures/: scanner.json
app_scanner/locale/ru/LC_MESSAGES/: django.mo  django.po
app_scanner/migrations/: 0001_initial.py
app_users/: admin.py  forms.py  urls.py  views.py
djangoScannerXSS/: __init__.py  asgi.py  celery.py  celery_worker.py  settings.py  urls.py  wsgi.py
templates/app_scanner/: 404.html  about.html  base.html  contact.html  index.html  project.html  review.html  scan.html  service.html  team.html  testimonial.html
templates/app_users/: login.html  profile.html  scan.html  signup.html
templates/blocks/: navbar.html
