[tool.poetry]
name = "djangoscannerxss"
version = "0.1.0"
description = ""
authors = ["alvinist27 <suhrobhotamov496@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2"
wemake-python-styleguide = "0.17.0"
mypy = "1.2.0"
python-dotenv = "1.0.0"
psycopg2-binary = "2.9.6"
selenium = "4.8.3"
beautifulsoup4 = "4.12.2"
requests = "2.28.2"
celery = "5.2.7"
redis = "4.5.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
